lab3/lab3_ws/log/build_2023-07-27_07-16-26/wall_follow/stdout_stderr.log
running egg_info
writing ../../build/wall_follow/wall_follow.egg-info/PKG-INFO
writing dependency_links to ../../build/wall_follow/wall_follow.egg-info/dependency_links.txt
writing entry points to ../../build/wall_follow/wall_follow.egg-info/entry_points.txt
writing requirements to ../../build/wall_follow/wall_follow.egg-info/requires.txt
writing top-level names to ../../build/wall_follow/wall_follow.egg-info/top_level.txt
reading manifest file '../../build/wall_follow/wall_follow.egg-info/SOURCES.txt'
writing manifest file '../../build/wall_follow/wall_follow.egg-info/SOURCES.txt'
running build
running build_py
copying wall_follow/wall_follow.py -> /root/F1Tenth-Labs/lab3/lab3_ws/build/wall_follow/build/lib/wall_follow
running install
running install_lib
copying /root/F1Tenth-Labs/lab3/lab3_ws/build/wall_follow/build/lib/wall_follow/wall_follow.py -> /root/F1Tenth-Labs/lab3/lab3_ws/install/wall_follow/lib/python3.8/site-packages/wall_follow
byte-compiling /root/F1Tenth-Labs/lab3/lab3_ws/install/wall_follow/lib/python3.8/site-packages/wall_follow/wall_follow.py to wall_follow.cpython-38.pyc
  File "/root/F1Tenth-Labs/lab3/lab3_ws/install/wall_follow/lib/python3.8/site-packages/wall_follow/wall_follow.py", line 66
    if (self.prev_secs == 0.0) & (self.prev_nsecs == 0.0) & (self.prev_error_1 = 0.0):
                                                                               ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/root/F1Tenth-Labs/lab3/lab3_ws/install/wall_follow/lib/python3.8/site-packages/wall_follow-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/wall_follow/wall_follow.egg-info to /root/F1Tenth-Labs/lab3/lab3_ws/install/wall_follow/lib/python3.8/site-packages/wall_follow-0.0.0-py3.8.egg-info
running install_scripts
Installing wall_follow script to /root/F1Tenth-Labs/lab3/lab3_ws/install/wall_follow/lib/wall_follow
writing list of installed files to '/root/F1Tenth-Labs/lab3/lab3_ws/build/wall_follow/install.log'
